# hdl_analyzer

./: .gitignore  README.md  pyproject.toml
scripts/: hdl_analyzer_hiearchy.py  hdl_analyzer_project.py
src/hdl_analyzer/: Project.py
src/hdl_analyzer/Analyzer/: .Hiearchy.py.swp  Analyzer.py  Hiearchy.py
src/hdl_analyzer/ProjectLanguage/: Language.py  SystemVerilog.py  VHDL.py  Verilog.py
src/hdl_analyzer/scripts/: hdl_analyzer_hiearchy.py  hdl_analyzer_project.py
tests/: .gitignore  test_systemverilog_multi_hier.py  test_verilog_generate.py  test_verilog_multi_hier.py  test_verilog_params_like_arm.py  test_vhdl_top_verilog.py  verilog_generate.json  verilog_multi_hier.json
tests/systemverilog_multi_hier/: logic_l1.sv  logic_l2.sv  logic_l4.sv  top.sv
tests/verilog_generate/: cond.v  logic.v  params.v  top.v
tests/verilog_multi_hier/: logic_l3.v  logic_l5.v  params.v  top.v
tests/verilog_params_like_arm/: inst.v  param.v  top.v
tests/vhdl_top_verilog/: package.vhd  top.vhdl  verilog_abc_xor.v
